--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Build
         run: |
-          npm ci
+          npm i
           npm run build
           npm run export
           touch out/.nojekyll
